# nmdbnb

./: README.md
server/: README.md  db.sqlite3  pyproject.toml
server/bookings/: admin.py  models.py  serializers.py
server/bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
server/categories/: serializers.py  views.py
server/categories/migrations/: 0001_initial.py  0002_alter_category_options.py
server/config/: authentication.py  settings.py  urls.py
server/direct_messages/: admin.py  models.py
server/direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
server/experiences/: admin.py  models.py  serializers.py  urls.py  views.py
server/experiences/migrations/: 0001_initial.py  0002_experience_category.py  0003_alter_experience_category_alter_experience_host_and_more.py
server/houses/: admin.py  models.py
server/houses/migrations/: 0001_initial.py  0002_initial.py  0002_rename_price_house_price_per_night_and_more.py
server/medias/: admin.py  models.py  views.py
server/medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_romm_and_more.py  0003_rename_romm_photo_room.py  0004_alter_photo_file_alter_video_file.py
server/reviews/: models.py  serializers.py
server/reviews/migrations/: 0001_initial.py  (+1 more)
server/rooms/: admin.py  models.py  serializers.py  tests.py  views.py
server/users/: admin.py  models.py  serializers.py  urls.py  views.py
server/wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
(+27 files in other folders)
